Rework application completely using KickstartFX